Pom.xml corrected