@@ -8,15 +8,12 @@
     <artifactId>Demo_Cucumber_Selenium</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
-<<<<<<< HEAD
+
         <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
-=======
->>>>>>> main
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-<<<<<<< HEAD
                 <version>3.2.5</version>
                 <configuration>
                     <testSourceDirectory>${project.basedir}/src/test/java/runners</testSourceDirectory>
@@ -32,24 +29,15 @@
                         <version>3.2.5</version>
                     </dependency>
                 </dependencies>
-=======
-                <version>3.1.2</version>
-                <configuration>
-                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
-                </configuration>
->>>>>>> main
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-<<<<<<< HEAD
                     <release>15</release>
-=======
                     <source>${java.version}</source>
                     <target>${java.version}</target>
->>>>>>> main
                 </configuration>
             </plugin>
             <plugin>
@@ -57,7 +45,6 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
-<<<<<<< HEAD
             <plugin>
                 <groupId>com.trivago.rta</groupId>
                 <artifactId>cluecumber-report-plugin</artifactId>
@@ -76,8 +63,6 @@
                     <generatedHtmlReportDirectory>${project.basedir}\GeneratedReport</generatedHtmlReportDirectory>
                 </configuration>
             </plugin>
-=======
->>>>>>> main
         </plugins>
     </build>
 
@@ -101,8 +86,6 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.7.0</version>
-<<<<<<< HEAD
-=======
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -119,7 +102,6 @@
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-testng</artifactId>
             <version>1.2.5</version>
->>>>>>> main
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
@@ -136,7 +118,6 @@
             <artifactId>swagger-parser</artifactId>
             <version>2.1.7</version>
         </dependency>
-<<<<<<< HEAD
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
@@ -159,7 +140,5 @@
             <artifactId>surefire-junit4</artifactId>
             <version>3.2.5</version>
         </dependency>
-=======
->>>>>>> main
     </dependencies>
 </project>
